crates/rs_html_parser/tests/snapshots/html5lib_test1_test__tests__correct_doctype_case_with_eof.snap
---
source: crates/rs_html_parser/tests/html5lib_test1_test.rs
expression: "parser_test(r####\"<!DOCTYPE HtMl\"####)"
---
[
    Token {
        data: "DOCTYPE HtMl",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
