crates/rs_html_parser/tests/snapshots/html5lib_test1_test__tests__correct_doctype_mixed_case.snap
---
source: crates/rs_html_parser/tests/html5lib_test1_test.rs
expression: "parser_test(r####\"<!DOCTYPE HtMl>\"####)"
---
[
    Token {
        data: "DOCTYPE HtMl",
        attrs: None,
        kind: ProcessingInstruction,
        is_implied: false,
    },
]
