crates/rs_html_parser/tests/snapshots/html5lib_test1_test__tests__correct_doctype_uppercase.snap
---
source: crates/rs_html_parser/tests/html5lib_test1_test.rs
expression: "parser_test(\"<!DOCTYPE HTML>\")"
---
[
    Token {
        data: "",
        attrs: Some(
            {
                "!DOCTYPE HTML": None,
            },
        ),
        kind: ProcessingInstruction,
        is_implied: false,
    },
]
