crates/rs_html_parser/tests/snapshots/html5lib_test1_test__tests__doctype_in_error.snap
---
source: crates/rs_html_parser/tests/html5lib_test1_test.rs
expression: "parser_test(r####\"<!DOCTYPE foo>\"####)"
---
[
    Token {
        data: "",
        attrs: Some(
            {
                "!DOCTYPE foo": None,
            },
        ),
        kind: ProcessingInstruction,
        is_implied: false,
    },
]
