crates/rs_html_parser/tests/snapshots/html5lib_test1_test__tests__empty_start_tag.snap
---
source: crates/rs_html_parser/tests/html5lib_test1_test.rs
expression: "parser_test(\"<>\")"
---
[
    Token {
        data: "<>",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
