crates/rs_html_parser/tests/snapshots/html5lib_test1_test__tests__entity_in_attribute_without_semicolon.snap
---
source: crates/rs_html_parser/tests/html5lib_test1_test.rs
expression: "parser_test(r####\"<h a='&COPY'>\"####)"
---
[
    Token {
        data: "h",
        attrs: Some(
            {
                "a": Some(
                    (
                        "©",
                        Single,
                    ),
                ),
            },
        ),
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "h",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
